<?xml version="1.0"?>
<package format="2">
  <name>cnc_machine_gazebo</name>
  <version>0.0.0</version>
  <description>The cnc_machine_gazebo package</description>

  
  <maintainer email="leo@todo.todo">leo</maintainer>


  
  <license>TODO</license>


  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  

 <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_model_path="${prefix}/models/cnc2"/> 
</export>
</package>
